elements/pf-chip/pf-chip.css
:host {
  display: inline-flex;
}

*[hidden],
:host([hidden]),
:host([overflow-hidden]) {
  display: none !important;
}

#outer {
  min-height: 44px;
  min-width: 44px;
  max-width: 100%;
  display: inline-flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 !important;
  background-color: var(--pf-theme--color--surface--lightest, #fff);
  color: var(--pf-theme--color--text, #151515);
  border-radius: var(--pf-global--BorderRadius--sm, 3px);
  border: 1px solid var(--pf-global--BorderColor--100, #d2d2d2);
  position: relative;
}


:host(:focus-within) #outer {
  border-color: var(--pf-theme--color--accent, #0066cc);
}

:host,
.chip-content {
  display: inline-flex;
  align-items: center;
}

.chip-content {
  font-family: var(--pf-global--FontFamily--sans-serif, "RedHatTextUpdated", "Overpass", overpass, helvetica, arial, sans-serif);
  font-size: var(--pf-global--FontSize--xs, 12px);
  font-weight: var(--pf-global--FontWeight--normal, 400);
  line-height: 1.6;
  overflow-x: hidden;
  overflow-y: hidden;
  text-overflow: ellipsis;
  display: inline-flex;
  text-wrap: nowrap;
  white-space: nowrap;
  margin: var(--pf-global--spacer--xs, 0.25rem) var(--pf-global--spacer--sm, 0.5rem);
  flex: 1 0 calc(100% - 44px);
}

:host([read-only]) .chip-content {
  color: var(--pf-theme--color--ui-base, #6a6e73);
}

:host([overflow-chip]) .chip-content {
  color: var(--pf-theme--color--accent, #0066cc);
  margin: 0 var(--pf-global--spacer--sm, 0.5rem);
}

button {
  background-color: transparent;
  border: none;
  color: var(--pf-theme--color--ui-base, #6a6e73);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 44px;
}

button::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

button:focus {
  outline: none !important;
}

svg {
  width: var(--pf-global--FontSize--xs, 12px);
  height: var(--pf-global--FontSize--xs, 12px);
  margin: var(--pf-global--spacer--xs, 0.25rem) 0;
}

::slotted(pf-badge) {
  font-size: var(--pf-global--FontSize--xs, 12px);
  margin: 0 0 0 var(--pf-global--spacer--xs, 0.25rem) !important;
  min-width: unset;
}

